# EROverlay

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  EROverlay.ini  EROverlay.ini.zhCN  LICENSE  README.md  README_CN.md  ach_order.txt  ach_order.txt.zhCN  dist.bat
cmake/: CustomCompilerOptions.cmake  GlobalOptions.cmake  ProjectMacros.cmake
configs/: achievements.ini  boss.ini  common.ini  input.ini  minimap.ini  style.ini
data/: ach_cols.txt  ach_order.txt  ach_order.txt.zhCN  deude.json  engus.json  frafr.json  itait.json  jpnjp.json  korkr.json  polpl.json  porbr.json  rusru.json  spaar.json  spaes.json  thath.json  zhocn.json  zhotw.json
data/deude/: bosses.json
data/engus/: bosses.json
data/frafr/: bosses.json
data/itait/: bosses.json
data/jpnjp/: bosses.json
data/korkr/: bosses.json
data/polpl/: bosses.json
data/porbr/: bosses.json
data/rusru/: bosses.json
data/spaar/: bosses.json
data/spaes/: bosses.json
data/thath/: bosses.json
data/zhotw/: bosses.json
docs/: building.md  writing-plugins.md
injector/: CMakeLists.txt  main.c
src/: CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  README.md  README_CN.md  api.cpp  api.h  api.hpp  common.hpp  config.cpp  config.hpp  console.cpp  console.hpp  d3drenderer.cpp  d3drenderer.hpp  dllmain.cpp  embeddedfont.cpp  global.cpp  global.hpp  hooking.cpp  hooking.hpp  initialize.hpp  memory.hpp  plugin.cpp  plugin.hpp  renderbase.hpp  steamapi.cpp  steamapi.hpp
src/achievements/: CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  README.md  README_CN.md  data.cpp  data.hpp  dllmain.cpp  render.cpp  render.hpp
src/api/: api.cpp  api.h  define.h  steam_api64.def  steamapi.h
src/boss/: CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  README.md  README_CN.md  data.cpp  data.hpp  dllmain.cpp  render.cpp  render.hpp
src/boss/data/engus/: bosses.json
src/boss/data/itait/: bosses.json
src/boss/data/jpnjp/: bosses.json
src/boss/data/korkr/: bosses.json
src/boss/data/polpl/: bosses.json
src/boss/data/spaar/: bosses.json
src/boss/data/thath/: bosses.json
src/boss/data/zhocn/: bosses.json
src/bosses/: CMakeLists.txt  data.cpp  data.hpp  dllmain.cpp  render.cpp  render.hpp
src/minimap/: CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  README.md  README_CN.md  data.cpp  data.hpp  dllmain.cpp  param_to_cpp.py  paramdefs.hpp  render.cpp  render.hpp
src/minimap/data/: bonfires.json
src/minimap/defs/: BonfireWarpParam.h  WorldMapLegacyConvParam.h  WorldMapPointParam.h
src/params/: param.cpp  param.hpp  paraminternal.hpp  pointers.cpp  pointers.hpp  wstring.cpp  wstring.hpp
src/proxy/: winhttp.c  winhttp.def  winhttp.h
src/util/: file.cpp  file.hpp  ini.hpp  memory.hpp  signature.hpp  steam.cpp  steam.hpp  steamapi.cpp  steamapi.hpp  string.cpp  string.hpp  sysfont.cpp  sysfont.hpp  vector.hpp
